# florence-2-local

./: .gitignore  main.py  main_notebook.ipynb  pyproject.toml  readme.md
