[tool.poetry]
name = "florence"
version = "0.1.0"
description = "Little backend using Florence-2"
authors = ["antonio_martinez88@hotmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
